@@ -80,10 +80,10 @@
                   _description="Maximum number of fragments to expose in the playlist (default:5)" />
         <property name="max-extra-buffers" type="int"
                   _description="Maximum number of extra fragments kept in the ring (default:max-window+1)" />
-        <property name="key-rotation" type="int"
+        <!--property name="key-rotation" type="int"
                   _description="Number of fragments sharing the same encryption key. Use 0 for not using encryption (default:0)" />
         <property name="keys-uri" type="string"
-                  _description="URI used to retrieve the encryption keys" />
+                  _description="URI used to retrieve the encryption keys" /!-->
       </properties>
 
     </component>
